# base

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  clippy.toml  deny.toml  lychee.toml  rustfmt.toml
actions/harness/: Cargo.toml
actions/harness/src/: actor_derivation_node.rs  actor_follow_node.rs  engine.rs  engine_server.rs  follow_node.rs  harness.rs  l1_server.rs  l2.rs  lib.rs  matrix.rs  p2p.rs  test_rollup_config.rs
actions/harness/src/batcher/: actor.rs
actions/harness/src/providers/: l1.rs
actions/harness/tests/: actor_derivation.rs  actor_follow_node.rs  batch_submission.rs  batcher_blobs.rs  batcher_channels.rs  batcher_gap_filling.rs  batcher_hardfork_transitions.rs  batcher_sequencer_drift.rs  derivation.rs  ecotone_activation.rs  finalization.rs  follow_node.rs  hardfork_activation.rs  holocene_activation.rs  node_derivation.rs  operator_fees.rs  unsafe_gossip.rs
actions/harness/tests/azul/: clz.rs  derivation.rs  main.rs  modexp.rs  p256.rs
crates/batcher/core/: Cargo.toml
crates/batcher/core/src/: admin.rs  config.rs  driver.rs  lib.rs  submissions.rs  throttle.rs  throttle_client.rs
crates/batcher/core/src/test_utils/: builder.rs
crates/batcher/core/tests/: heads.rs  lifecycle.rs  pause_resume.rs  reorg.rs  throttle.rs
crates/batcher/service/: Cargo.toml
crates/batcher/service/src/: config.rs  endpoint_pool.rs  l1_source.rs  lib.rs  safe_head_poller.rs  service.rs  source.rs  throttle.rs
crates/batcher/service/tests/: failover.rs
crates/builder/core/: Cargo.toml
crates/builder/core/benches/: state_root.rs
crates/builder/core/src/: config.rs  execution.rs  extension.rs  lib.rs  metering.rs  metrics.rs  rejected_tx_forwarder.rs  traits.rs
crates/builder/core/src/flashblocks/: context.rs  generator.rs  handler.rs  mod.rs  payload.rs  schedule.rs  service.rs  state_root_task.rs  state_trie_warmer.rs  traits.rs
crates/builder/core/src/test_utils/: apis.rs  driver.rs  instance.rs  mod.rs  txs.rs  utils.rs
crates/builder/core/tests/: bundles.rs  flashblocks.rs  miner_gas_limit.rs  rpc.rs  txpool.rs
crates/builder/metering/: Cargo.toml
crates/builder/metering/src/: store.rs
crates/builder/publish/: Cargo.toml
crates/builder/publish/src/: broadcast.rs  lib.rs  listener.rs  metrics.rs  publisher.rs
crates/client/bundle/: Cargo.toml  README.md
crates/client/bundle/src/: extension.rs  lib.rs
crates/client/metering/: Cargo.toml
crates/client/metering/src/: block.rs  cache.rs  collector.rs  estimator.rs  extension.rs  inspector.rs  lib.rs  meter.rs  metrics.rs  rpc.rs  transaction.rs  trie_cache.rs
crates/client/tx-forwarding/: Cargo.toml
crates/client/tx-forwarding/src/: audit_config.rs  audit_dispatcher.rs  config.rs  extension.rs  lib.rs
crates/common/chains/: Cargo.toml  README.md
crates/common/chains/src/: chain.rs  config.rs  hardforks.rs  lib.rs  spec.rs  upgrade.rs  upgrades.rs
crates/common/evm/: Cargo.toml
crates/common/evm/src/: base_v1.rs  compat.rs  error.rs  evm.rs  executor.rs  executor_factory.rs  factory.rs  handler.rs  l1block.rs  lib.rs  pre_execution.rs  precompiles.rs  receipt_builder.rs  spec.rs
crates/common/evm/src/api/: builder.rs  default_ctx.rs  exec.rs  mod.rs
crates/common/evm/src/executor/: block_executor.rs  context.rs  factory.rs  mod.rs  result.rs
crates/common/evm/src/precompiles/: bls12_381.rs  bn254_pair.rs  mod.rs  provider.rs
crates/common/evm/src/transaction/: builder.rs  core.rs  deposit.rs  error.rs  mod.rs  (+1 more)
crates/common/macros/: Cargo.toml  README.md
crates/common/macros/src/: in_memory_size.rs  lib.rs
crates/common/network/: Cargo.toml
crates/common/network/src/: base.rs  builder.rs  lib.rs  reth.rs  wallet.rs
crates/common/provider/: Cargo.toml
crates/common/provider/src/: lib.rs
crates/common/signer/: Cargo.toml
crates/consensus/engine/: Cargo.toml  README.md
crates/consensus/engine/src/: client.rs  lib.rs  query.rs  versions.rs  ws_connect.rs
crates/consensus/genesis/: Cargo.toml
crates/consensus/genesis/src/: rollup.rs
crates/consensus/genesis/static/: azul_activation_banner.txt
crates/consensus/leadership/: Cargo.toml  README.md
crates/consensus/leadership/src/: actor.rs  admin.rs  config.rs  driver.rs  error.rs  health.rs  lib.rs  mock_driver.rs  openraft_driver.rs  status.rs  validator.rs
crates/consensus/rpc/: Cargo.toml
crates/consensus/rpc/src/: admin.rs  client.rs  config.rs  jsonrpsee.rs  l1_watcher.rs  leadership.rs  lib.rs  metrics.rs  p2p.rs  rollup.rs
crates/consensus/service/: Cargo.toml  README.md
crates/consensus/service/src/: lib.rs
crates/consensus/upgrades/: Cargo.toml
crates/consensus/upgrades/src/: base_v1.rs  ecotone.rs  fjord.rs  forks.rs  isthmus.rs  jovian.rs  lib.rs  test_utils.rs
crates/core/address-resolution/: Cargo.toml  README.md
crates/core/address-resolution/src/: lib.rs  traits.rs  types.rs  virtual_addr.rs
crates/core/chains/: Cargo.toml  README.md
crates/core/chains/src/: config.rs  hardfork.rs  lib.rs
crates/core/db-api/: Cargo.toml
crates/core/db-api/src/: cursor.rs  database.rs  database_metrics.rs  lib.rs  mock.rs  scale.rs  table.rs
crates/core/ethereum-primitives/: Cargo.toml
crates/core/ethereum-primitives/src/: transaction.rs
crates/core/forks/: Cargo.toml
crates/core/forks/src/: lib.rs
crates/core/rpc-jsonrpsee/: Cargo.toml
crates/core/rpc-jsonrpsee/src/: lib.rs  traits.rs
crates/txpool/: Cargo.toml
crates/txpool/src/: aa_invalidation.rs  aa_validate.rs  base_pool.rs  best.rs  eip8130_invalidation.rs  eip8130_pool.rs  eip8130_validate.rs  l1.rs  lib.rs  transaction.rs  validator.rs  wire.rs
crates/txpool/src/builder/: metrics.rs  rpc.rs
crates/txpool/src/bundle/: maintain.rs  mod.rs  rpc.rs
crates/txpool/src/consumer/: metrics.rs  mod.rs  task.rs
crates/txpool/src/forwarder/: mod.rs  task.rs
examples/virtual-address-registry/: Cargo.toml  README.md
examples/virtual-address-registry/src/: abi.rs  contracts.rs  evm_override.rs  lib.rs  registry.rs
examples/virtual-address-registry/tests/: e2e.rs
(+2385 files in other folders)
