[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.93"
license = "MIT"
homepage = "https://github.com/base/base"
repository = "https://github.com/base/base"
exclude = [".github/"]

[workspace]
resolver = "2"
members = [
  "bin/audit-archiver",
  "bin/basectl",
  "bin/based",
  "bin/batcher",
  "bin/builder",
  "bin/challenger",
  "bin/consensus",
  "bin/ingress-rpc",
  "bin/mempool-rebroadcaster",
  "bin/node",
  "bin/proposer",
  "bin/prover/nitro-host",
  "bin/prover/nitro-enclave",
  "bin/prover/zk",
  "bin/prover-registrar",
  "bin/websocket-proxy",
  "crates/client/*",
  "crates/consensus/*",
  "crates/proof/mpt",
  "crates/proof/proof",
  "crates/proof/driver",
  "crates/proof/client",
  "crates/proof/executor",
  "crates/proof/preimage",
  "crates/proof/primitives",
  "crates/proof/fpvm-precompiles",
  "crates/proof/host",
  "crates/proof/std-fpvm",
  "crates/proof/std-fpvm-proc",
  "crates/proof/tee/nitro-host",
  "crates/proof/tee/nitro-enclave",
  "crates/proof/tee/registrar",
  "crates/proof/tee/nitro-verifier",
  "crates/proof/tee/nitro-attestation-prover",
  "crates/proof/zk/client",
  "crates/proof/zk/db",
  "crates/proof/zk/outbox",
  "crates/proof/zk/service",
  "crates/proof/contracts",
  "crates/proof/rpc",
  "crates/proof/proposer",
  "crates/proof/challenge",
  "crates/utilities/*",
  "crates/batcher/*",
  "crates/builder/*",
  "crates/infra/audit",
  "crates/infra/basectl",
  "crates/infra/based",
  "crates/infra/ingress-rpc",
  "crates/infra/mempool-rebroadcaster",
  "crates/infra/websocket-proxy",
  "crates/infra/load-tests",
  "crates/alloy/*",
  "crates/execution/*",
  "crates/txpool",
  "crates/reth/crates/chain-state",
  "crates/reth/crates/chainspec",
  "crates/reth/crates/config",
  "crates/reth/crates/e2e-test-utils",
  "crates/reth/crates/era",
  "crates/reth/crates/era-downloader",
  "crates/reth/crates/era-utils",
  "crates/reth/crates/errors",
  "crates/reth/crates/etl",
  "crates/reth/crates/fs-util",
  "crates/reth/crates/metrics",
  "crates/reth/crates/primitives",
  "crates/reth/crates/primitives-traits",
  "crates/reth/crates/revm",
  "crates/reth/crates/tasks",
  "crates/reth/crates/tokio-util",
  "crates/reth/crates/tracing",
  "crates/reth/crates/tracing-otlp",
  "crates/reth/crates/transaction-pool",
  "crates/reth/crates/cli/*",
  "crates/reth/crates/consensus/*",
  "crates/reth/crates/engine/*",
  "crates/reth/crates/ethereum/*",
  "crates/reth/crates/evm/*",
  "crates/reth/crates/exex/*",
  "crates/reth/crates/net/*",
  "crates/reth/crates/node/*",
  "crates/reth/crates/payload/*",
  "crates/reth/crates/prune/*",
  "crates/reth/crates/rpc/*",
  "crates/reth/crates/stages/*",
  "crates/reth/crates/static-file/*",
  "crates/reth/crates/storage/*",
  "crates/reth/crates/storage/libmdbx-rs",
  "crates/reth/crates/storage/libmdbx-rs/mdbx-sys",
  "crates/reth/crates/trie/*",
  "crates/reth/testing/testing-utils",
  "etc/tools/*",
  "devnet",
  "actions/harness",
]
default-members = [
  "bin/based",
  "bin/node",
  "bin/basectl",
  "bin/builder",
  "bin/challenger",
  "bin/consensus",
  "bin/ingress-rpc",
  "bin/audit-archiver",
  "bin/mempool-rebroadcaster",
  "bin/proposer",
  "bin/prover/nitro-host",
  "bin/prover/nitro-enclave",
  "bin/prover/zk",
  "bin/prover-registrar",
]

[workspace.metadata.cargo-udeps.ignore]
normal = ["rustls-platform-verifier"]

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
# Baseline - enable all default clippy lints
all = { level = "warn", priority = -1 }

# === Performance & Cloning ===
missing-const-for-fn = "warn"
redundant-clone = "warn"
clone-on-ref-ptr = "warn"
unnecessary-to-owned = "warn"
cloned-instead-of-copied = "warn"
flat-map-option = "warn"
implicit-clone = "warn"
or-fun-call = "warn"

# === Code Style ===
wildcard-imports = "warn"
use-self = "warn"
option-if-let-else = "warn"
uninlined-format-args = "warn"
manual-string-new = "warn"
single-char-pattern = "warn"
redundant-else = "warn"
match-same-arms = "warn"

# === Safety & Documentation ===
undocumented-unsafe-blocks = "warn"
doc-markdown = "warn"

# === Debugging Artifacts ===
dbg-macro = "warn"

# === Code Quality ===
branches-sharing-code = "warn"
derive-partial-eq-without-eq = "warn"
explicit-into-iter-loop = "warn"
explicit-iter-loop = "warn"
iter-with-drain = "warn"
needless-pass-by-ref-mut = "warn"
string-lit-as-bytes = "warn"

[profile.dev]
debug = "line-tables-only"
incremental = true

[profile.hivetests]
inherits = "test"
opt-level = 3
lto = "thin"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.maxperf-symbols]
inherits = "maxperf"
debug = "full"
strip = "none"

# TODO: add `rustflags = ["-Cforce-frame-pointers=yes"]` here once
# `profile-rustflags` is stabilized (tracking: rust-lang/cargo#10271)
[profile.profiling]
inherits = "release"
lto = false
debug = "line-tables-only"
strip = "none"

[profile.bench]
inherits = "profiling"

[profile.reproducible]
inherits = "release"
panic = "abort"
codegen-units = 1
incremental = false

# CI profile: optimized for fast GHA builds and minimal disk usage
[profile.ci]
inherits = "dev"
debug = false
incremental = false

[workspace.dependencies]
# Base Primitives
base-bundles = { path = "crates/alloy/bundles" }
base-alloy-signer = { path = "crates/alloy/signer" }
base-alloy-network = { path = "crates/alloy/network" }
base-alloy-provider = { path = "crates/alloy/provider" }
base-alloy-chains = { path = "crates/alloy/chains" }
base-alloy-rpc-types = { path = "crates/alloy/rpc-types" }
base-access-lists = { path = "crates/alloy/access-lists" }
base-alloy-flashblocks = { path = "crates/alloy/flashblocks" }
base-alloy-rpc-jsonrpsee = { path = "crates/alloy/rpc-jsonrpsee" }
base-alloy-evm = { path = "crates/alloy/evm", default-features = false }
base-alloy-flz = { path = "crates/alloy/flz", default-features = false }
base-alloy-consensus = { path = "crates/alloy/consensus", default-features = false }
base-alloy-rpc-types-engine = { path = "crates/alloy/rpc-types-engine", default-features = false }

# Builder
base-builder-core = { path = "crates/builder/core" }
base-builder-publish = { path = "crates/builder/publish" }
base-builder-metering = { path = "crates/builder/metering" }

# Client
base-bundle-extension = { path = "crates/client/bundle" }
base-client-cli = { path = "crates/client/cli" }
base-metering = { path = "crates/client/metering" }
base-tx-forwarding = { path = "crates/client/tx-forwarding" }
base-proofs-extension = { path = "crates/client/proofs" }
base-txpool-tracing = { path = "crates/client/txpool-tracing" }
base-flashblocks-node = { path = "crates/client/flashblocks-node" }

# Consensus
base-consensus-rpc = { path = "crates/consensus/rpc" }
base-protocol = { path = "crates/consensus/protocol", default-features = false }
base-consensus-disc = { path = "crates/consensus/disc", default-features = false }
base-consensus-peers = { path = "crates/consensus/peers", default-features = false }
base-consensus-node = { path = "crates/consensus/service", default-features = false }
base-consensus-derive = { path = "crates/consensus/derive", default-features = false }
base-consensus-engine = { path = "crates/consensus/engine", default-features = false }
base-consensus-gossip = { path = "crates/consensus/gossip", default-features = false }
base-consensus-sources = { path = "crates/consensus/sources", default-features = false }
base-consensus-genesis = { path = "crates/consensus/genesis", default-features = false }
base-consensus-registry = { path = "crates/consensus/registry", default-features = false }
base-consensus-safedb = { path = "crates/consensus/safedb" }
base-consensus-upgrades = { path = "crates/consensus/upgrades", default-features = false }
base-consensus-providers = { path = "crates/consensus/providers-alloy", default-features = false }

# Execution
base-node-core = { path = "crates/execution/node" }
base-execution-cli = { path = "crates/execution/cli" }
base-execution-evm = { path = "crates/execution/evm" }
base-execution-rpc = { path = "crates/execution/rpc" }
base-node-runner = { path = "crates/execution/runner" }
base-execution-exex = { path = "crates/execution/exex" }
base-execution-trie = { path = "crates/execution/trie" }
base-txpool-rpc = { path = "crates/execution/txpool-rpc" }
base-engine-tree = { path = "crates/execution/engine-tree" }
base-flashblocks = { path = "crates/execution/flashblocks" }
base-execution-forks = { path = "crates/execution/hardforks" }
base-execution-storage = { path = "crates/execution/storage" }
base-execution-chainspec = { path = "crates/execution/chainspec" }
base-execution-consensus = { path = "crates/execution/consensus" }
base-execution-primitives = { path = "crates/execution/primitives" }
base-execution-payload-builder = { path = "crates/execution/payload" }
base-revm = { path = "crates/execution/revm", default-features = false }

# Txpool
base-txpool = { path = "crates/txpool" }

# Infra
based = { path = "crates/infra/based" }
basectl-cli = { path = "crates/infra/basectl" }
audit-archiver-lib = { path = "crates/infra/audit" }
ingress-rpc-lib = { path = "crates/infra/ingress-rpc" }
websocket-proxy = { path = "crates/infra/websocket-proxy" }
mempool-rebroadcaster = { path = "crates/infra/mempool-rebroadcaster" }

# Proof
base-zk-db = { path = "crates/proof/zk/db" }
base-proof-rpc = { path = "crates/proof/rpc" }
base-proposer = { path = "crates/proof/proposer" }
base-zk-client = { path = "crates/proof/zk/client" }
base-zk-outbox = { path = "crates/proof/zk/outbox" }
base-challenger = { path = "crates/proof/challenge" }
base-zk-service = { path = "crates/proof/zk/service" }
base-proof-contracts = { path = "crates/proof/contracts" }
base-proof-tee-nitro-host = { path = "crates/proof/tee/nitro-host" }
base-proof-tee-nitro-enclave = { path = "crates/proof/tee/nitro-enclave" }
base-proof-tee-registrar = { path = "crates/proof/tee/registrar" }
base-proof = { path = "crates/proof/proof", default-features = false }
base-proof-mpt = { path = "crates/proof/mpt", default-features = false }
base-proof-host = { path = "crates/proof/host", default-features = false }
base-proof-tee-nitro-verifier = { path = "crates/proof/tee/nitro-verifier" }
base-proof-tee-nitro-attestation-prover = { path = "crates/proof/tee/nitro-attestation-prover" }
base-proof-client = { path = "crates/proof/client", default-features = false }
base-proof-driver = { path = "crates/proof/driver", default-features = false }
base-proof-executor = { path = "crates/proof/executor", default-features = false }
base-proof-preimage = { path = "crates/proof/preimage", default-features = false }
base-proof-std-fpvm = { path = "crates/proof/std-fpvm", default-features = false }
base-proof-primitives = { path = "crates/proof/primitives", default-features = false }
base-proof-std-fpvm-proc = { path = "crates/proof/std-fpvm-proc", default-features = false }
base-proof-fpvm-precompiles = { path = "crates/proof/fpvm-precompiles", default-features = false }

# Actions
base-action-harness = { path = "actions/harness" }

# Batcher
base-blobs = { path = "crates/batcher/blobs" }
base-batcher-core = { path = "crates/batcher/core" }
base-batcher-admin = { path = "crates/batcher/admin" }
base-batcher-source = { path = "crates/batcher/source" }
base-batcher-encoder = { path = "crates/batcher/encoder" }
base-batcher-service = { path = "crates/batcher/service" }
base-comp = { path = "crates/batcher/comp", default-features = false }

# Utilities
base-jwt = { path = "crates/utilities/jwt" }
base-health = { path = "crates/utilities/health" }
base-cli-utils = { path = "crates/utilities/cli" }
base-reth-cli = { path = "crates/utilities/reth-cli" }
base-test-utils = { path = "crates/utilities/test-utils" }
base-tx-manager = { path = "crates/utilities/tx-manager" }
base-metrics = { path = "crates/utilities/metrics", default-features = false }
base-runtime = { path = "crates/utilities/runtime", default-features = false }

# revm
revm = { version = "34.0.0", default-features = false }
revm-bytecode = { version = "8.0.0", default-features = false }
revm-database = { version = "10.0.0", default-features = false }
revm-primitives = { version = "22.0.0", default-features = false }
revm-context-interface = { version = "14.0.0", default-features = false }

# alloy
alloy-signer = "1.6.3"
alloy-network = "1.6.3"
alloy-eip7928 = "0.3.0"
alloy-provider = "1.6.3"
alloy-contract = "1.6.3"
alloy-json-rpc = "1.6.3"
alloy-transport = "1.6.3"
alloy-rpc-types = "1.6.3"
alloy-hardforks = "0.4.5"
alloy-sol-macro = "1.5.6"
alloy-rpc-client = "1.6.3"
alloy-signer-local = "1.6.3"
alloy-node-bindings = "1.6.3"
alloy-transport-http = "1.6.3"
alloy-rpc-types-beacon = "1.6.3"
alloy-rlp = { version = "0.3.13", default-features = false }
alloy-trie = { version = "0.9.4", default-features = false }
alloy-eips = { version = "1.6.3", default-features = false }
alloy-evm = { version = "0.27.2", default-features = false }
alloy-serde = { version = "1.6.3", default-features = false }
alloy-chains = { version = "0.2.5", default-features = false }
alloy-genesis = { version = "1.6.3", default-features = false }
alloy-consensus = { version = "1.6.3", default-features = false }
alloy-sol-types = { version = "1.5.6", default-features = false }
alloy-primitives = { version = "1.5.6", default-features = false }
alloy-rpc-types-eth = { version = "1.6.3", default-features = false }
alloy-rpc-types-debug = { version = "1.6.3", default-features = false }
alloy-rpc-types-engine = { version = "1.6.3", default-features = false }
alloy-network-primitives = { version = "1.6.3", default-features = false }

# reth
reth-db = { path = "crates/reth/crates/storage/db" }
reth-cli = { path = "crates/reth/crates/cli/cli" }
reth-ipc = { path = "crates/reth/crates/rpc/ipc" }
reth-evm = { path = "crates/reth/crates/evm/evm" }
reth-rpc = { path = "crates/reth/crates/rpc/rpc" }
reth-revm = { path = "crates/reth/crates/revm" }
reth-trie = { path = "crates/reth/crates/trie/trie" }
reth-exex = { path = "crates/reth/crates/exex/exex" }
reth-tasks = { path = "crates/reth/crates/tasks" }
reth-errors = { path = "crates/reth/crates/errors" }
reth-codecs = { path = "crates/reth/crates/storage/codecs" }
reth-db-api = { path = "crates/reth/crates/storage/db-api" }
reth-metrics = { path = "crates/reth/crates/metrics" }
reth-trie-db = { path = "crates/reth/crates/trie/db" }
reth-rpc-api = { path = "crates/reth/crates/rpc/rpc-api" }
reth-network = { path = "crates/reth/crates/net/network" }
reth-tracing = { path = "crates/reth/crates/tracing" }
reth-provider = { path = "crates/reth/crates/storage/provider" }
reth-cli-util = { path = "crates/reth/crates/cli/util" }
reth-node-api = { path = "crates/reth/crates/node/api" }
reth-db-common = { path = "crates/reth/crates/storage/db-common" }
reth-rpc-layer = { path = "crates/reth/crates/rpc/rpc-layer" }
reth-node-core = { path = "crates/reth/crates/node/core" }
reth-consensus = { path = "crates/reth/crates/consensus/consensus" }
reth-chainspec = { path = "crates/reth/crates/chainspec" }
reth-primitives = { path = "crates/reth/crates/primitives" }
reth-cli-runner = { path = "crates/reth/crates/cli/runner" }
reth-tokio-util = { path = "crates/reth/crates/tokio-util" }
reth-rpc-convert = { path = "crates/reth/crates/rpc/rpc-convert" }
reth-rpc-builder = { path = "crates/reth/crates/rpc/rpc-builder" }
reth-storage-api = { path = "crates/reth/crates/storage/storage-api" }
reth-rpc-eth-api = { path = "crates/reth/crates/rpc/rpc-eth-api" }
reth-engine-tree = { path = "crates/reth/crates/engine/tree" }
reth-chain-state = { path = "crates/reth/crates/chain-state" }
reth-trie-common = { path = "crates/reth/crates/trie/common" }
reth-payload-util = { path = "crates/reth/crates/payload/util" }
reth-node-builder = { path = "crates/reth/crates/node/builder" }
reth-node-metrics = { path = "crates/reth/crates/node/metrics" }
reth-cli-commands = { path = "crates/reth/crates/cli/commands" }
reth-evm-ethereum = { path = "crates/reth/crates/ethereum/evm" }
reth-tracing-otlp = { path = "crates/reth/crates/tracing-otlp" }
reth-testing-utils = { path = "crates/reth/testing/testing-utils" }
reth-rpc-eth-types = { path = "crates/reth/crates/rpc/rpc-eth-types" }
reth-trie-parallel = { path = "crates/reth/crates/trie/parallel" }
reth-network-peers = { path = "crates/reth/crates/net/peers" }
reth-node-ethereum = { path = "crates/reth/crates/ethereum/node" }
reth-rpc-engine-api = { path = "crates/reth/crates/rpc/rpc-engine-api" }
reth-e2e-test-utils = { path = "crates/reth/crates/e2e-test-utils" }
reth-payload-builder = { path = "crates/reth/crates/payload/builder" }
reth-execution-types = { path = "crates/reth/crates/evm/execution-types" }
reth-exex-test-utils = { path = "crates/reth/crates/exex/test-utils" }
reth-rpc-server-types = { path = "crates/reth/crates/rpc/rpc-server-types" }
reth-transaction-pool = { path = "crates/reth/crates/transaction-pool" }
reth-execution-errors = { path = "crates/reth/crates/evm/execution-errors" }
reth-payload-validator = { path = "crates/reth/crates/payload/validator" }
reth-primitives-traits = { path = "crates/reth/crates/primitives-traits" }
reth-engine-primitives = { path = "crates/reth/crates/engine/primitives" }
reth-payload-primitives = { path = "crates/reth/crates/payload/primitives" }
reth-ethereum-primitives = { path = "crates/reth/crates/ethereum/primitives" }
reth-basic-payload-builder = { path = "crates/reth/crates/payload/basic" }
reth-payload-builder-primitives = { path = "crates/reth/crates/payload/builder-primitives" }
reth-prune-types = { path = "crates/reth/crates/prune/types", default-features = false }
reth-stages-types = { path = "crates/reth/crates/stages/types", default-features = false }
reth-storage-errors = { path = "crates/reth/crates/storage/errors", default-features = false }
reth-ethereum-forks = { path = "crates/reth/crates/ethereum/hardforks", default-features = false }
reth-consensus-common = { path = "crates/reth/crates/consensus/common", default-features = false }
reth-zstd-compressors = { path = "crates/reth/crates/storage/zstd-compressors", default-features = false }

# tokio
tokio = { version = "1.48.0", default-features = false }
tokio-util = "0.7.4"
tokio-stream = "0.1.17"
tokio-tungstenite = "0.28.0"

# async
futures = "0.3.31"
reqwest = { version = "0.13.1", features = ["blocking", "query", "stream"] }
async-trait = "0.1.83"

# grpc
prost = "0.14"
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"

# rpc
jsonrpsee = "0.26.0"
jsonrpsee-core = "0.26.0"
jsonrpsee-types = "0.26.0"

# cli
clap = "4.5.57"
clap_builder = "4.5.57"

# Tracing
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
tracing = { version = "0.1.43", default-features = false }

# Metrics
metrics-derive = "0.1.0"
metrics = { version = "0.24.3", default-features = false }
metrics-process = { version = "2.4.3", default-features = false, features = ["metrics-rs"] }
metrics-exporter-prometheus = { version = "0.18.1", default-features = false }
metrics-util = { version = "0.20.1", default-features = false }
ordered-float = "5"

# aws
aws-nitro-enclaves-cose = "0.5"
aws-nitro-enclaves-nsm-api = "0.4"
aws-config = { version = "1.1.7", default-features = false }
aws-sdk-s3 = { version = "1.106.0", default-features = false }
aws-sdk-ec2 = { version = "1.217.0", default-features = false }
aws-credential-types = { version = "1.1.7", default-features = false }
aws-sdk-elasticloadbalancingv2 = { version = "1.109.0", default-features = false }

# risc0 / boundless
boundless-market = "1.1"
risc0-ethereum-contracts = "3.0.1"
risc0-zkvm = { version = "^3.0", default-features = false }

# crypto
sha3 = "0.10"
k256 = "0.13"
p384 = "0.13"
zeroize = "1"
ciborium = "0.2"
x509-cert = "0.2"
rustls = "0.23.35"
secp256k1 = "0.30"
x509-parser = "0.17"
rustls-pki-types = "1.0"
sha2 = { version = "0.10", default-features = false }
c-kzg = { version = "2.1.5", default-features = false }

# http
http = "1.4"
hyper = "1.8"
tower = "0.5"
http-body = "1.0"
hyper-util = "0.1.11"
http-body-util = "0.1.3"
tower-http = { version = "0.6", features = ["limit"] }
axum = { version = "0.8.3", default-features = false }

# p2p
discv5 = "0.10"
libp2p = "0.56.0"
libp2p-identity = "0.2.12"

# serde
bincode = "2"
serde_bytes = "0.11"
serde_with = "3.8.1"
ethereum_ssz = "0.9"
serde_yaml = "0.9.34"
ethereum_ssz_derive = "0.9"
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.145", default-features = false }

# testing
arbtest = "0.3"
test-case = "3"
mockall = "0.14"
tempfile = "3.8"
rstest = "0.26.1"
criterion = "0.8"
serial_test = "3"
httpmock = "0.8.2"
proptest = "1.10.0"
similar-asserts = "1"
proptest-arbitrary-interop = "0.1.0"
arbitrary = { version = "1", default-features = false }
wiremock = { version = "0.6.2", default-features = false }
testcontainers = { version = "0.27", default-features = false }
testcontainers-modules = { version = "0.15", default-features = false }

# misc
snap = "1"
hex = "0.4"
url = "2.5"
libc = "0.2"
ctor = "0.6"
eyre = "0.6"
lru = "0.16"
rand = "0.9"
moka = "0.12"
vsock = "0.5"
uuid = "1.21"
dirs = "6.0.0"
anyhow = "1.0"
rayon = "1.11"
nanoid = "0.4"
strum = "0.28"
tar = "0.4.44"
rkyv = "0.8"
backon = "1.6"
time = "0.3.44"
base64 = "0.22"
rlimit = "0.11"
dashmap = "6.1"
bytes = "1.11.1"
cadence = "1.7.0"
arboard = "3.6.1"
chrono = "0.4.42"
backoff = "0.4.0"
humantime = "2.3"
hostname = "0.4.0"
ratatui = "0.30.0"
crossterm = "0.29"
arc-swap = "1.7.1"
tokio-vsock = "0.7"
hex-literal = "1.1"
auto_impl = "1.2.0"
shellexpand = "3.1"
dirs-next = "2.0.0"
ambassador = "0.4.2"
miniz_oxide = "0.9.0"
parking_lot = "0.12.3"
opentelemetry = "0.31"
tikv-jemallocator = "0.6"
concurrent-queue = "2.5.0"
modular-bitfield = "0.13.1"
crossbeam-channel = "0.5.13"
rand_08 = { package = "rand", version = "0.8" }
zip = { version = "8.1", default-features = false }
hashbrown = { version = "0.16", features = ["rayon"] }
brotli = { version = "8.0.2", default-features = false }
redb = "2"
rocksdb = { version = "0.24", default-features = false }
rdkafka = { version = "0.39", default-features = false }
thiserror = { version = "2.0", default-features = false }
either = { version = "1.15.0", default-features = false }
dotenvy = { version = "0.15.7", default-features = false }
derive_more = { version = "2.1.0", default-features = false, features = ["full"] }

# database
sqlx = { version = "0.8", default-features = false }

# rate limiting
governor = "0.7"
nonzero_ext = "0.3"

# transitive deps
syn = "2.0"
quote = "1.0"
spin = "0.10"
ipnet = "2.11"
notify = { version = "8.2", default-features = false, features = ["macos_fsevent"] }
cfg-if = "1.0"
openssl = "0.10"
backtrace = "0.3"
getrandom = "0.4"
multihash = "0.19"
serde_repr = "0.1"
proc-macro2 = "1.0"
async-stream = "0.3"
async-channel = "2.5"
alloc-no-stdlib = "2.0"
libp2p-stream = "0.4.0-alpha"
buddy_system_allocator = "0.12"
toml = { version = "1.0", default-features = false, features = ["display", "parse", "serde"] }
ark-ff = { version = "0.5.0", default-features = false }
unsigned-varint = { version = "0.8", default-features = false }
ark-bls12-381 = { version = "0.5.0", default-features = false }

# reth-only additions
aes = "0.8.1"
ahash = "0.8"
alloy-dyn-abi = "1.5.6"
alloy-eip2124 = { version = "0.2.0", default-features = false }
alloy-op-evm = { version = "0.27.2", default-features = false }
alloy-op-hardforks = "0.4.4"
alloy-pubsub = { version = "1.6.3", default-features = false }
alloy-rpc-types-admin = { version = "1.6.3", default-features = false }
alloy-rpc-types-anvil = { version = "1.6.3", default-features = false }
alloy-rpc-types-mev = { version = "1.6.3", default-features = false }
alloy-rpc-types-trace = { version = "1.6.3", default-features = false }
alloy-rpc-types-txpool = { version = "1.6.3", default-features = false }
alloy-transport-ipc = { version = "1.6.3", default-features = false }
alloy-transport-ws = { version = "1.6.3", default-features = false }
aquamarine = "0.6"
arrayvec = { version = "0.7.6", default-features = false }
assert_matches = "1.5.0"
async-compression = { version = "0.4", default-features = false }
bindgen = { version = "0.72", default-features = false }
bitflags = "2.4"
block-padding = "0.3"
boyer-moore-magiclen = "0.2.16"
byteorder = "1"
cc = "1.2.15"
cipher = "0.4.3"
color-eyre = "0.6"
comfy-table = "7.0"
concat-kdf = "0.1.0"
csv = "1.3.0"
ctr = "0.9.2"
ctrlc = "3.4"
data-encoding = "2"
delegate = "0.13"
digest = "0.10.5"
dyn-clone = "1.0.17"
enr = { version = "0.13", default-features = false }
fdlimit = "0.3.0"
fixed-cache = { version = "0.1.7", features = ["stats"] }
fixed-map = { version = "0.9", default-features = false }
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }
hash-db = "=0.15.2"
hickory-resolver = "0.25.0"
hmac = "0.12.1"
human_bytes = "0.4.1"
humantime-serde = "1.1"
if-addrs = "0.14"
indexmap = "2"
insta = "1.41"
interprocess = "2.2.0"
itertools = { version = "0.14", default-features = false }
jemalloc_pprof = { version = "0.8", default-features = false }
jsonrpsee-http-client = "0.26.0"
jsonrpsee-server = "0.26.0"
linked_hash_set = "0.1"
lz4 = "1.28.1"
lz4_flex = { version = "0.12", default-features = false }
memmap2 = "0.9.4"
mev-share-sse = { version = "0.5.0", default-features = false }
num-traits = "0.2.15"
nybbles = { version = "0.4.8", default-features = false }
once_cell = { version = "1.19", default-features = false, features = ["critical-section"] }
op-alloy-consensus = { version = "0.23.1", default-features = false }
op-alloy-flz = { version = "0.13.1", default-features = false }
op-alloy-network = { version = "0.23.1", default-features = false }
op-alloy-rpc-jsonrpsee = { version = "0.23.1", default-features = false }
op-alloy-rpc-types = { version = "0.23.1", default-features = false }
op-alloy-rpc-types-engine = { version = "0.23.1", default-features = false }
op-revm = { version = "15.0.0", default-features = false }
opentelemetry-appender-tracing = "0.31"
opentelemetry-otlp = "0.31"
opentelemetry-semantic-conventions = "0.31"
opentelemetry_sdk = "0.31"
page_size = "0.6.0"
parity-scale-codec = "3.2.1"
paste = "1.0"
pin-project = "1.0.12"
plain_hasher = "0.2"
pretty_assertions = "1.4"
proptest-derive = "0.7"
reth-codecs-derive = { path = "crates/reth/crates/storage/codecs/derive" }
reth-config = { path = "crates/reth/crates/config", default-features = false }
reth-consensus-debug-client = { path = "crates/reth/crates/consensus/debug-client" }
reth-db-models = { path = "crates/reth/crates/storage/db-models", default-features = false }
reth-discv4 = { path = "crates/reth/crates/net/discv4" }
reth-discv5 = { path = "crates/reth/crates/net/discv5" }
reth-dns-discovery = { path = "crates/reth/crates/net/dns" }
reth-downloaders = { path = "crates/reth/crates/net/downloaders" }
reth-ecies = { path = "crates/reth/crates/net/ecies" }
reth-engine-local = { path = "crates/reth/crates/engine/local" }
reth-engine-service = { path = "crates/reth/crates/engine/service" }
reth-engine-util = { path = "crates/reth/crates/engine/util" }
reth-era = { path = "crates/reth/crates/era" }
reth-era-downloader = { path = "crates/reth/crates/era-downloader" }
reth-era-utils = { path = "crates/reth/crates/era-utils" }
reth-eth-wire = { path = "crates/reth/crates/net/eth-wire" }
reth-eth-wire-types = { path = "crates/reth/crates/net/eth-wire-types" }
reth-ethereum = { path = "crates/reth/crates/ethereum/reth" }
reth-ethereum-cli = { path = "crates/reth/crates/ethereum/cli", default-features = false }
reth-ethereum-consensus = { path = "crates/reth/crates/ethereum/consensus", default-features = false }
reth-ethereum-engine-primitives = { path = "crates/reth/crates/ethereum/engine-primitives", default-features = false }
reth-ethereum-payload-builder = { path = "crates/reth/crates/ethereum/payload" }
reth-etl = { path = "crates/reth/crates/etl" }
reth-exex-types = { path = "crates/reth/crates/exex/types" }
reth-fs-util = { path = "crates/reth/crates/fs-util" }
reth-invalid-block-hooks = { path = "crates/reth/crates/engine/invalid-block-hooks" }
reth-libmdbx = { path = "crates/reth/crates/storage/libmdbx-rs" }
reth-mdbx-sys = { path = "crates/reth/crates/storage/libmdbx-rs/mdbx-sys" }
reth-net-banlist = { path = "crates/reth/crates/net/banlist" }
reth-net-nat = { path = "crates/reth/crates/net/nat" }
reth-network-api = { path = "crates/reth/crates/net/network-api" }
reth-network-p2p = { path = "crates/reth/crates/net/p2p" }
reth-network-types = { path = "crates/reth/crates/net/network-types" }
reth-nippy-jar = { path = "crates/reth/crates/storage/nippy-jar" }
reth-node-ethstats = { path = "crates/reth/crates/node/ethstats" }
reth-node-events = { path = "crates/reth/crates/node/events" }
reth-node-types = { path = "crates/reth/crates/node/types" }
reth-prune = { path = "crates/reth/crates/prune/prune" }
reth-rpc-api-testing-util = { path = "crates/reth/crates/rpc/rpc-testing-util" }
reth-rpc-e2e-tests = { path = "crates/reth/crates/rpc/rpc-e2e-tests" }
reth-stages = { path = "crates/reth/crates/stages/stages" }
reth-stages-api = { path = "crates/reth/crates/stages/api" }
reth-static-file = { path = "crates/reth/crates/static-file/static-file" }
reth-static-file-types = { path = "crates/reth/crates/static-file/types", default-features = false }
reth-storage-rpc-provider = { path = "crates/reth/crates/storage/rpc-provider" }
reth-trie-sparse = { path = "crates/reth/crates/trie/sparse", default-features = false }
revm-database-interface = { version = "9.0.0", default-features = false }
revm-inspectors = "0.34.2"
revm-interpreter = { version = "32.0.0", default-features = false }
revm-state = { version = "9.0.0", default-features = false }
ringbuffer = "0.16.0"
rmp-serde = "1.3"
roaring = "0.11.3"
rolling-file = "0.2.0"
rustc-hash = { version = "2.0", default-features = false }
schnellru = "0.2"
shlex = "1.3"
smallvec = "1"
snmalloc-rs = { version = "0.3.7", features = ["build_cc"] }
socket2 = { version = "0.6", default-features = false }
strum_macros = "0.27"
sysinfo = { version = "0.38", default-features = false }
tar-no-std = { version = "0.4.2", default-features = false }
test-fuzz = "7"
tikv-jemalloc-ctl = "0.6"
tracing-futures = "0.2"
tracing-journald = "0.3"
tracing-logfmt = "=0.3.5"
tracing-opentelemetry = "0.32"
tracing-samply = "0.1"
tracing-tracy = "0.11"
tracy-client = "0.18.0"
triehash = "0.8"
typenum = "1.15.0"
vergen = "9.1.0"
vergen-git2 = "9.1.0"
visibility = "0.1.1"
walkdir = "2.3.3"
zstd = "0.13"
