[package]
name = "base-action-harness"
description = "Action test harness for Base — simulated L1/L2 actors for protocol integration testing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
revm.workspace = true
tracing.workspace = true
thiserror.workspace = true
alloy-rlp.workspace = true
alloy-eips.workspace = true
async-trait.workspace = true
alloy-signer.workspace = true
alloy-primitives.workspace = true
alloy-trie = { workspace = true, features = ["ethereum"] }
alloy-consensus = { workspace = true, features = ["std"] }
alloy-signer-local.workspace = true
reth-evm = { workspace = true, features = ["std"] }
base-revm = { workspace = true, features = ["std"] }
base-protocol = { workspace = true, features = ["std"] }
base-execution-evm.workspace = true
base-alloy-consensus = { workspace = true, features = ["std", "evm"] }
base-execution-chainspec.workspace = true
base-consensus-genesis = { workspace = true, features = ["std", "revm"] }
base-consensus-derive = { workspace = true, features = ["test-utils"] }
base-consensus-registry.workspace = true
base-blobs.workspace = true
base-runtime.workspace = true
base-batcher-core.workspace = true
base-batcher-encoder.workspace = true
base-batcher-source.workspace = true
base-tx-manager.workspace = true
tokio-util.workspace = true
tokio = { workspace = true, features = ["rt"] }
alloy-rpc-types-eth.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
