[package]
name = "base-action-harness"
description = "Action test harness for Base — simulated L1/L2 actors for protocol integration testing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-evm = { workspace = true, features = ["std"] }

# revm
revm.workspace = true

# alloy
alloy-rpc-types-engine = { workspace = true, features = ["std"] }
alloy-trie = { workspace = true, features = ["ethereum"] }
alloy-consensus = { workspace = true, features = ["std"] }
alloy-transport-http.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-signer-local.workspace = true
alloy-primitives.workspace = true
alloy-hardforks.workspace = true
alloy-transport.workspace = true
alloy-provider.workspace = true
alloy-genesis.workspace = true
alloy-network.workspace = true
alloy-signer.workspace = true
alloy-eips.workspace = true
alloy-rlp.workspace = true

# base-evm
base-evm = { workspace = true, features = ["reth"] }

# base-alloy
base-alloy-consensus = { workspace = true, features = ["std", "evm"] }
base-alloy-rpc-types-engine.workspace = true
base-common-rpc-types.workspace = true
base-alloy-provider.workspace = true
base-alloy-network.workspace = true
base-alloy-chains.workspace = true

# base
base-consensus-derive = { workspace = true, features = ["test-utils"] }
base-consensus-genesis = { workspace = true, features = ["std"] }
base-protocol = { workspace = true, features = ["std"] }
base-execution-chainspec.workspace = true
base-consensus-registry.workspace = true
base-consensus-safedb.workspace = true
base-consensus-gossip.workspace = true
base-consensus-engine.workspace = true
base-batcher-encoder.workspace = true
base-consensus-node.workspace = true
base-batcher-source.workspace = true
base-batcher-core.workspace = true
base-tx-manager.workspace = true
base-runtime.workspace = true
base-blobs.workspace = true

# tokio
tokio = { workspace = true, features = ["rt"] }
tokio-util.workspace = true

# async
async-trait.workspace = true

# misc
thiserror.workspace = true
tempfile.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
