[package]
name = "base-action-harness"
description = "Action test harness for Base — simulated L1/L2 actors for protocol integration testing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-node-api.workspace = true
reth-db-common.workspace = true
reth-execution-types.workspace = true
reth-transaction-pool.workspace = true
reth-primitives-traits.workspace = true
reth-payload-primitives.workspace = true
reth-basic-payload-builder.workspace = true
reth-revm.workspace = true
reth-db = { workspace = true, features = ["test-utils"] }
reth-provider = { workspace = true, features = ["test-utils"] }

# alloy
alloy-rlp.workspace = true
alloy-eips.workspace = true
alloy-signer.workspace = true
alloy-network.workspace = true
alloy-provider.workspace = true
alloy-transport.workspace = true
alloy-primitives.workspace = true
alloy-signer-local.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-genesis = { workspace = true, features = ["std"] }
alloy-consensus = { workspace = true, features = ["std"] }
alloy-rpc-types-engine = { workspace = true, features = ["std"] }

# base-common
base-common-network.workspace = true
base-common-provider.workspace = true
base-common-rpc-types.workspace = true
base-common-rpc-types-engine.workspace = true
base-common-consensus = { workspace = true, features = ["std", "evm"] }

# base
base-blobs.workspace = true
base-runtime.workspace = true
base-node-core.workspace = true
base-test-utils.workspace = true
base-tx-manager.workspace = true
base-batcher-core.workspace = true
base-execution-evm.workspace = true
base-consensus-node.workspace = true
base-batcher-source.workspace = true
base-batcher-encoder.workspace = true
base-consensus-safedb.workspace = true
base-consensus-gossip.workspace = true
base-consensus-engine.workspace = true
base-execution-txpool.workspace = true
base-consensus-registry.workspace = true
base-execution-chainspec.workspace = true
base-execution-payload-builder.workspace = true
base-protocol = { workspace = true, features = ["std"] }
base-consensus-genesis = { workspace = true, features = ["std"] }
base-consensus-derive = { workspace = true, features = ["test-utils"] }

# tokio
tokio-util.workspace = true
tokio = { workspace = true, features = ["rt"] }

# async
async-trait.workspace = true

# misc
tracing.workspace = true
tempfile.workspace = true
thiserror.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
