[package]
name = "base-txpool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "OP-Reth Transaction Pool"

[lints]
workspace = true

[dependencies]
reth-transaction-pool.workspace = true

[features]
default = [ "metrics" ]
metrics = []
