[package]
name = "base-batcher-core"
description = "Batcher driver: async BatchDriver wiring encoder, source, and tx manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# local
base-blobs.workspace = true
base-tx-manager.workspace = true
base-batcher-source.workspace = true
base-batcher-encoder.workspace = true
base-protocol = { workspace = true, features = ["std"] }
base-runtime = { workspace = true, features = ["tokio"] }
base-common-consensus = { workspace = true, features = ["std"] }

# external
auto_impl.workspace = true
futures.workspace = true
tracing = { workspace = true, features = ["std"] }
thiserror = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive", "std"] }
alloy-primitives = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
derive_more = { workspace = true, features = ["debug", "display", "from_str"] }

# optional — activated by the `test-utils` feature
async-trait = { workspace = true, optional = true }
alloy-consensus = { workspace = true, features = ["std"], optional = true }
alloy-rpc-types-eth = { workspace = true, features = ["std"], optional = true }

[dev-dependencies]
rstest.workspace = true
async-trait.workspace = true
alloy-consensus = { workspace = true, features = ["std"] }
base-runtime = { workspace = true, features = ["test-utils"] }
alloy-rpc-types-eth = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["macros", "rt", "time"] }

[[test]]
name = "reorg"
required-features = ["test-utils"]

[[test]]
name = "throttle"
required-features = ["test-utils"]

[[test]]
name = "heads"
required-features = ["test-utils"]

[[test]]
name = "lifecycle"
required-features = ["test-utils"]

[[test]]
name = "pause_resume"
required-features = ["test-utils"]

[features]
metrics = [ "base-batcher-encoder/metrics", "base-tx-manager/metrics" ]
test-utils = [
	"base-protocol/test-utils",
	"base-runtime/test-utils",
	"dep:alloy-consensus",
	"dep:alloy-rpc-types-eth",
	"dep:async-trait",
]
